格式化后能进行回退操作

--- a/src/components/editor.css
+++ b/src/components/editor.css
@@ -17,7 +17,8 @@
     margin: 0;
     opacity: 0;
 }
-.editor pre.public-DraftStyleDefault-pre{
+.editor .DraftEditor-root{
+    position: relative;
     padding-left: 40px;
 }
 ul,li{
